--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 
 
 <body>
-<h1> The Fish website </h1>
+<h1> The Fish website Tamasha</h1>
 <p> Welcome to Fish Website </p>
 
 <h2> This is a boring section </h2>
